fix: find all event errors
