# backend/docs/swagger.json
@@ -82,6 +82,60 @@
             }
         },
         "/events": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Find all events",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "event"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Event"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -163,6 +217,9 @@
         "dto.CreateEventRequest": {
             "type": "object",
             "required": [
+                "company_id",
+                "dates",
+                "event_type_id",
                 "location"
             ],
             "properties": {
@@ -171,6 +228,8 @@
                 },
                 "dates": {
                     "type": "array",
+                    "maxItems": 3,
+                    "minItems": 3,
                     "items": {
                         "type": "string"
                     }
@@ -229,6 +288,48 @@
                 }
             }
         },
+        "model.Event": {
+            "type": "object",
+            "properties": {
+                "company": {
+                    "$ref": "#/definitions/model.Company"
+                },
+                "company_id": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "dates": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "date-time"
+                    }
+                },
+                "event_type": {
+                    "$ref": "#/definitions/model.EventType"
+                },
+                "event_type_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.EventType": {
             "type": "object",
             "properties": {
@@ -246,6 +347,17 @@
                 }
             }
         },
+        "model.Role": {
+            "type": "string",
+            "enum": [
+                "company",
+                "vendor"
+            ],
+            "x-enum-varnames": [
+                "CompanyRole",
+                "VendorRole"
+            ]
+        },
         "model.User": {
             "type": "object",
             "properties": {
@@ -259,7 +371,7 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
+                    "$ref": "#/definitions/model.Role"
                 },
                 "updated_at": {
                     "type": "string"
