# backend/internal/domain/model/event.go
@@ -13,14 +13,14 @@ type Event struct {
 	CompanyID   uint           `json:"company_id" gorm:"not null"`
 	UserID      uint           `json:"user_id" gorm:"not null"`
 	EventTypeID uint           `json:"event_type_id" gorm:"not null"`
-	Dates       pq.StringArray `json:"dates" gorm:"type:timestamp[];not null"`
+	Dates       pq.StringArray `json:"dates" gorm:"type:timestamp[];not null" swaggertype:"array,string" format:"date-time"`
 	Location    string         `json:"location" gorm:"not null"`
 	CreatedAt   time.Time      `json:"created_at" gorm:"autoCreateTime;not null"`
 	UpdatedAt   time.Time      `json:"updated_at" gorm:"autoUpdateTime;not null"`
 
-	Company   Company   `json:"company,omitempty" gorm:"foreignKey:CompanyID"`
-	EventType EventType `json:"event_type,omitempty" gorm:"foreignKey:EventTypeID"`
-	User      User      `json:"user,omitempty" gorm:"foreignKey:UserID"`
+	Company   *Company   `json:"company,omitempty" gorm:"foreignKey:CompanyID"`
+	EventType *EventType `json:"event_type,omitempty" gorm:"foreignKey:EventTypeID"`
+	User      *User      `json:"user,omitempty" gorm:"foreignKey:UserID"`
 }
 
 func (a *Event) BeforeCreate(tx *gorm.DB) (err error) {
